<resources>
    <string name="app_name">尚饭</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_index">IndexActivity</string>

    <string name="yes">确定</string>
    <string name="no">取消</string>

    <string-array name="select_photo">
        <item>拍照</item>
        <item>从相册选择</item>
    </string-array>
    <string name="select_photo_gallery">从相册选择</string>
    <string name="select_photo_take">拍照</string>
    <string name="save_photo_fail">不能写入相册</string>
    <string name="no_intent_to_take_photo">没有相机应用</string>

    // index
    <string name="bottom_tab_home">主页</string>
    <string name="bottom_tab_choice">随便</string>
    <string name="bottom_tab_message">消息</string>
    <string name="bottom_tab_user">我的</string>
    <string name="gif">GIF</string>
    <string name="op_star_failure">操作失败,请重试</string>
    <string name="confirm_delete_status">确认要删除这条消息?</string>
    <string name="delete_status_failure">删除失败, 请重试</string>

    // item
    <string-array name="extra_action">
        <item>@string/extra_menu_share_text</item>
        <item>@string/extra_menu_share_image</item>
        <item>@string/extra_menu_copy_text</item>
    </string-array>
    <string name="extra_menu_share_text">文字形式分享</string>
    <string name="extra_menu_share_image">卡片形式分享</string>
    <string name="extra_menu_copy_text">复制文字</string>

    // login
    <string name="login_username">饭否账号</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="login_load_message">登录中...</string>
    <string name="login_load_failed">登录失败，请重试</string>

    // user
    <string name="follow">关注</string>
    <string name="follower">粉丝</string>
    <string name="message">消息</string>
    <string name="user_status">我的消息</string>
    <string name="user_star">我的收藏</string>
    <string name="friend_request">好友请求</string>
    <string name="user_toolbox">饭友工具箱</string>
    <string name="user_feedback">意见反馈</string>
    <string name="follow_success">关注成功</string>

    <string name="user_title_friend">%s关注的</string>
    <string name="user_title_follower">关注%s的</string>
    <string name="me">我</string>
    <string name="other">他</string>

    // message
    <string name="message_title">消息盒子</string>
    <string name="message_tab_1">私信</string>
    <string name="message_tab_2">\@我</string>
    <string name="message_submit">发送</string>

    // friend request
    <string name="friend_request_op_failed">操作失败，请重试</string>


    // chat
    <string name="send_message_fail">消息发送失败, 请重试</string>
    <string name="no_follow_each_message">您和对方没有互相关注, 暂不支持客户端发送私信, 如有需要, 请使用网页端操作</string>

    // feedback
    <string name="feedback_auto_answer">谢谢你的意见和反馈, 我会及时处理【自动回复】</string>
    <string name="feedback_tip">如果你对尚饭客户端有任何不满, 或者想吐槽的地方, 欢迎吐槽</string>
    <string name="confirm_delete_feedback">确认删除所有反馈信息? 此次操作不可恢复</string>

    // userActivity
    <string name="user_follow">Follow</string>
    <string name="user_un_follow">UnFollow</string>
    <string name="user_tab_1">消息</string>
    <string name="user_tab_2">照片</string>
    <string name="user_tab_3">收藏</string>
    <string name="load_user_failure">用户信息加载失败, 请重试</string>
    <string name="confirm_un_follow_message">确认取消Follow?</string>
    <string name="follow_error">Sorry, 刚才的请求好像出了点问题, 请重试</string>
    <string name="request_follow_success">请求发送成功</string>
    <string name="user_info_protected">由于对方的设置，请先请求关注(点击右上角请求关注)</string>
    <string name="more_user_info">点击展开</string>

    // new
    <string name="commit">发饭</string>
    <string name="edit_text_hint">分享点新鲜事...</string>
    <string name="no_permission_to_photo">没有读取照片的权限</string>
    <string name="send_noti_title">发送中...</string>
    <string name="send_status_success">发送成功!</string>
    <string name="send_status_failure">发送失败, 点击重试</string>

    // web
    <string name="open_by_browser">外部浏览器打开</string>
    <string name="copy_url">复制网址</string>
    <string name="share_url">分享</string>

    // update
    <string name="update_version">版本更新</string>
    <string name="update_confirm">更新</string>
    <string name="update_cancel">拒绝你</string>
    <string name="update_permission_request">没有权限, 不能下载更新</string>
    <string name="update_no_new">您已经是最新版</string>
    <string name="update_not_remind">不再提醒这个版本</string>

    // notification
    <string name="notification_new_request">你有新的关注请求</string>
    <string name="notification_mention_title">消息提醒</string>
    <string name="notification_new_mention">%s 在饭否中提到了你</string>

    // timeline
    <string name="timeline_message_title">%s的消息</string>
    <string name="timeline_favorite_title">%s的收藏</string>

    // setting
    <string name="setting_title">设置</string>
    <string name="setting_notification">通知</string>
    <string name="setting_notification_message">私信提醒</string>
    <string name="setting_notification_mention">有人@我提醒</string>
    <string name="setting_notification_request">好友关注请求提醒</string>
    <string name="setting_notification_sound">提示音设置</string>
    <string name="setting_notification_sound_key">setting_notification_sound</string>
    <string-array name="setting_notification_sound_list">
        <item>@string/setting_notification_sound_sicilly</item>
        <item>@string/setting_notification_sound_default</item>
        <item>@string/setting_notification_sound_no</item>
    </string-array>
    <string name="setting_notification_sound_sicilly">尚饭提示音</string>
    <string name="setting_notification_sound_default">系统默认</string>
    <string name="setting_notification_sound_no">静音模式</string>
    <string name="setting_diy">个性化设置</string>
    <string name="setting_text_size">字体大小</string>
    <string name="setting_text_size_key">setting_text_size</string>
    <string-array name="text_size_list">
        <item>12</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
    </string-array>
    <string name="setting_share_card_suffix">分享卡片后缀</string>
    <string name="setting_share_suffix_key">setting_share_suffix</string>
    <string name="setting_share_card_suffix_default">via 尚饭</string>
    <string name="setting_clear_cache">清理缓存</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_check_update_key">setting_check_update</string>

    // search
    <string name="search_tab_timeline">消息</string>
    <string name="search_tab_user">用户</string>

    <array name="notification_sound_type_list">
        <item>0</item>
        <item>1</item>
    </array>
    <array name="notification_sound_value_list">
        <item>尚饭提示音</item>
        <item>系统默认提示音</item>
    </array>
    <integer name="notification_sound_type_default">0</integer>
    <string name="setting_about">关于尚饭</string>
    <string name="setting_mark">给个五星好评</string>
    <string name="setting_log_out">退出登录</string>
    <string name="log_out_message">确认退出登录？</string>

    <string name="app_market_uri">market://details?id=xyz.shaohui.sicilly</string>

    // share
    <string name="share_save_image">保存图片</string>
    <string name="share_copy_text">复制文字</string>
    <string name="share_copy_url">复制链接</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_failure">分享失败</string>
    
    // about
    <string name="about_open_source">开源协议</string>
    <string name="about_github">GitHub地址</string>
    <string name="about_github_site">https://github.com/shaohui10086/sicilly</string>
    <string name="about_contact">联系开发者</string>
    <string name="about_developer">\@邵辉Vista</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_register">-- 注册账号 --</string>
    <string name="status_detail">消息详情</string>
    <string name="public_square">随便看看</string>
    <string name="save_image">图片已保存至：%s</string>
    <string name="save_image_fail">图片保存失败，请重试</string>
    <string name="dialog_share_cancel">取消</string>
    <string name="copy_text_tip">已复制到剪切板</string>
</resources>
