<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:imeOptions="actionNext"
            android:hint="@string/login_username"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:imeOptions="actionDone"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/text_main"
        android:background="@drawable/drawable_login_bg"/>


</LinearLayout>