<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="xyz.shaohui.sicilly.views.setting.AboutActivity"
        >

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                >
            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:src="@mipmap/ic_icon"
                    />
            <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="尚饭 1.1.1"
                    />
            <FrameLayout
                    android:id="@+id/frame_github"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:layout_marginTop="30dp"
                    android:paddingLeft="@dimen/spacing_normal"
                    android:paddingRight="@dimen/spacing_normal"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/about_github"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="14sp"
                        android:maxWidth="100dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/about_github_site"
                        android:textColor="@color/primary_text"
                        />
            </FrameLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider"/>
            <FrameLayout
                    android:id="@+id/frame_open_source"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/spacing_normal"
                    android:paddingRight="@dimen/spacing_normal"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/about_open_source"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
            </FrameLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/divider"/>
            <FrameLayout
                    android:id="@+id/frame_contact"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/spacing_normal"
                    android:paddingRight="@dimen/spacing_normal"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/about_contact"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|right"
                        android:textSize="14sp"
                        android:maxWidth="100dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:text="@string/about_developer"
                        android:textColor="@color/primary_text"
                        />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                >

            <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:paddingLeft="@dimen/spacing_normal"
                    android:paddingRight="@dimen/spacing_normal"
                    app:srcCompat="@drawable/ic_back_black"
                    />

            <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/btn_back"
                    android:gravity="center"
                    android:text="@string/setting_about"
                    android:textColor="@color/text_main"
                    android:textSize="16sp"
                    />
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/drawable_shadow_top"
                />
    </LinearLayout>

</FrameLayout>
